@@ -11,13 +11,11 @@ import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.xpath.XPath;
 import javax.xml.xpath.XPathConstants;
-import javax.xml.xpath.XPathExpressionException;
 import javax.xml.xpath.XPathFactory;
 import javax.xml.transform.*;
 import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.stream.StreamResult;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
@@ -25,76 +23,50 @@ import java.util.Scanner;
 /**
  * Classe principal que permet gestionar un fitxer XML de cursos amb opcions per llistar, afegir i eliminar alumnes, 
  * així com mostrar informació dels cursos i mòduls.
- * 
- * Aquesta classe inclou funcionalitats per interactuar amb un fitxer XML, executar operacions de consulta,
- * i realitzar modificacions en el contingut del fitxer.
  */
 public class PR132Main {
 
     private final Path xmlFilePath;
     private static final Scanner scanner = new Scanner(System.in);
 
-    /**
-     * Constructor de la classe PR132Main.
-     * 
-     * @param xmlFilePath Ruta al fitxer XML que conté la informació dels cursos.
-     */
     public PR132Main(Path xmlFilePath) {
         this.xmlFilePath = xmlFilePath;
     }
 
-    /**
-     * Mètode principal que inicia l'execució del programa.
-     * 
-     * @param args Arguments passats a la línia de comandament (no s'utilitzen en aquest programa).
-     */
     public static void main(String[] args) {
         String userDir = System.getProperty("user.dir");
-        Path xmlFilePath = Paths.get(userDir, "data", "pr13", "cursos.xml");
+        Path xmlFilePath = Path.of(userDir, "data", "pr13", "cursos.xml");
 
         PR132Main app = new PR132Main(xmlFilePath);
         app.executar();
     }
 
-    /**
-     * Executa el menú principal del programa fins que l'usuari decideixi sortir.
-     */
     public void executar() {
         boolean exit = false;
         while (!exit) {
             mostrarMenu();
             System.out.print("Escull una opció: ");
             int opcio = scanner.nextInt();
-            scanner.nextLine(); // Netegem el buffer del scanner
+            scanner.nextLine(); // Netegem buffer
             exit = processarOpcio(opcio);
         }
     }
 
-    /**
-     * Processa l'opció seleccionada per l'usuari.
-     * 
-     * @param opcio Opció seleccionada al menú.
-     * @return True si l'usuari decideix sortir del programa, false en cas contrari.
-     */
     public boolean processarOpcio(int opcio) {
-        String cursId;
-        String nomAlumne;
+        String cursId, nomAlumne;
         switch (opcio) {
             case 1:
-                List<List<String>> cursos = llistarCursos();
-                imprimirTaulaCursos(cursos);
+                imprimirTaulaCursos(llistarCursos());
                 return false;
             case 2:
                 System.out.print("Introdueix l'ID del curs per veure els seus mòduls: ");
                 cursId = scanner.nextLine();
-                List<List<String>> moduls = mostrarModuls(cursId);
-                imprimirTaulaModuls(moduls);
+                imprimirTaulaModuls(mostrarModuls(cursId));
                 return false;
             case 3:
                 System.out.print("Introdueix l'ID del curs per veure la llista d'alumnes: ");
                 cursId = scanner.nextLine();
-                List<String> alumnes = llistarAlumnes(cursId);
-                imprimirLlistaAlumnes(alumnes);
+                imprimirLlistaAlumnes(llistarAlumnes(cursId));
                 return false;
             case 4:
                 System.out.print("Introdueix l'ID del curs on vols afegir l'alumne: ");
@@ -119,9 +91,6 @@ public class PR132Main {
         }
     }
 
-    /**
-     * Mostra el menú principal amb les opcions disponibles.
-     */
     private void mostrarMenu() {
         System.out.println("\nMENÚ PRINCIPAL");
         System.out.println("1. Llistar IDs de cursos i tutors");
@@ -132,94 +101,105 @@ public class PR132Main {
         System.out.println("6. Sortir");
     }
 
-    /**
-     * Llegeix el fitxer XML i llista tots els cursos amb el seu tutor i nombre d'alumnes.
-     * 
-     * @return Llista amb la informació dels cursos (ID, tutor, nombre d'alumnes).
-     */
     public List<List<String>> llistarCursos() {
-        // *************** CODI PRÀCTICA **********************/
-        return null; // Substitueix pel teu
+        List<List<String>> llistaCursos = new ArrayList<>();
+        try {
+            Document doc = carregarDocumentXML(xmlFilePath);
+            XPath xpath = XPathFactory.newInstance().newXPath();
+            NodeList nodes = (NodeList) xpath.evaluate("/cursos/curs", doc, XPathConstants.NODESET);
+            for (int i = 0; i < nodes.getLength(); i++) {
+                Element curs = (Element) nodes.item(i);
+                String id = curs.getAttribute("id");
+                String tutor = xpath.evaluate("tutor", curs);
+                NodeList alumnesNodes = (NodeList) xpath.evaluate("alumnes/alumne", curs, XPathConstants.NODESET);
+                String totalAlumnes = String.valueOf(alumnesNodes.getLength());
+                llistaCursos.add(List.of(id, tutor, totalAlumnes));
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return llistaCursos;
     }
 
-    /**
-     * Imprimeix per consola una taula amb la informació dels cursos.
-     * 
-     * @param cursos Llista amb la informació dels cursos.
-     */
     public void imprimirTaulaCursos(List<List<String>> cursos) {
         List<String> capçaleres = List.of("ID", "Tutor", "Total Alumnes");
         AsciiTablePrinter.imprimirTaula(capçaleres, cursos);
     }
 
-    /**
-     * Mostra els mòduls d'un curs especificat pel seu ID.
-     * 
-     * @param idCurs ID del curs del qual es volen veure els mòduls.
-     * @return Llista amb la informació dels mòduls (ID, títol).
-     */
     public List<List<String>> mostrarModuls(String idCurs) {
-        // *************** CODI PRÀCTICA **********************/
-        return null; // Substitueix pel teu
+        List<List<String>> moduls = new ArrayList<>();
+        try {
+            Document doc = carregarDocumentXML(xmlFilePath);
+            XPath xpath = XPathFactory.newInstance().newXPath();
+            NodeList nodes = (NodeList) xpath.evaluate("/cursos/curs[@id='" + idCurs + "']/moduls/modul", doc, XPathConstants.NODESET);
+            for (int i = 0; i < nodes.getLength(); i++) {
+                Element modul = (Element) nodes.item(i);
+                String id = modul.getAttribute("id");
+                String titol = xpath.evaluate("titol", modul);
+                moduls.add(List.of(id, titol));
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return moduls;
     }
 
-    /**
-     * Imprimeix per consola una taula amb la informació dels mòduls.
-     * 
-     * @param moduls Llista amb la informació dels mòduls.
-     */
     public void imprimirTaulaModuls(List<List<String>> moduls) {
         List<String> capçaleres = List.of("ID Mòdul", "Títol");
         AsciiTablePrinter.imprimirTaula(capçaleres, moduls);
     }
 
-    /**
-     * Llista els alumnes inscrits en un curs especificat pel seu ID.
-     * 
-     * @param idCurs ID del curs del qual es volen veure els alumnes.
-     * @return Llista amb els noms dels alumnes.
-     */
     public List<String> llistarAlumnes(String idCurs) {
-        // *************** CODI PRÀCTICA **********************/
-        return null; // Substitueix pel teu
+        List<String> alumnes = new ArrayList<>();
+        try {
+            Document doc = carregarDocumentXML(xmlFilePath);
+            XPath xpath = XPathFactory.newInstance().newXPath();
+            NodeList nodes = (NodeList) xpath.evaluate("/cursos/curs[@id='" + idCurs + "']/alumnes/alumne", doc, XPathConstants.NODESET);
+            for (int i = 0; i < nodes.getLength(); i++) {
+                alumnes.add(nodes.item(i).getTextContent());
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return alumnes;
     }
 
-    /**
-     * Imprimeix per consola la llista d'alumnes d'un curs.
-     * 
-     * @param alumnes Llista d'alumnes a imprimir.
-     */
     public void imprimirLlistaAlumnes(List<String> alumnes) {
         System.out.println("Alumnes:");
         alumnes.forEach(alumne -> System.out.println("- " + alumne));
     }
 
-    /**
-     * Afegeix un alumne a un curs especificat pel seu ID.
-     * 
-     * @param idCurs ID del curs on es vol afegir l'alumne.
-     * @param nomAlumne Nom de l'alumne a afegir.
-     */
     public void afegirAlumne(String idCurs, String nomAlumne) {
-        // *************** CODI PRÀCTICA **********************/
+        try {
+            Document doc = carregarDocumentXML(xmlFilePath);
+            XPath xpath = XPathFactory.newInstance().newXPath();
+            Node alumnesNode = (Node) xpath.evaluate("/cursos/curs[@id='" + idCurs + "']/alumnes", doc, XPathConstants.NODE);
+            if (alumnesNode != null) {
+                Element nouAlumne = doc.createElement("alumne");
+                nouAlumne.setTextContent(nomAlumne);
+                alumnesNode.appendChild(nouAlumne);
+                guardarDocumentXML(doc);
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
-    /**
-     * Elimina un alumne d'un curs especificat pel seu ID.
-     * 
-     * @param idCurs ID del curs d'on es vol eliminar l'alumne.
-     * @param nomAlumne Nom de l'alumne a eliminar.
-     */
     public void eliminarAlumne(String idCurs, String nomAlumne) {
-        // *************** CODI PRÀCTICA **********************/
+        try {
+            Document doc = carregarDocumentXML(xmlFilePath);
+            XPath xpath = XPathFactory.newInstance().newXPath();
+            NodeList nodes = (NodeList) xpath.evaluate("/cursos/curs[@id='" + idCurs + "']/alumnes/alumne[text()='" + nomAlumne + "']", doc, XPathConstants.NODESET);
+            for (int i = 0; i < nodes.getLength(); i++) {
+                Node alumne = nodes.item(i);
+                alumne.getParentNode().removeChild(alumne);
+            }
+            guardarDocumentXML(doc);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
-    /**
-     * Carrega el document XML des de la ruta especificada.
-     * 
-     * @param pathToXml Ruta del fitxer XML a carregar.
-     * @return Document XML carregat.
-     */
     private Document carregarDocumentXML(Path pathToXml) {
         try {
             DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
@@ -230,11 +210,6 @@ public class PR132Main {
         }
     }
 
-    /**
-     * Guarda el document XML proporcionat en la ruta del fitxer original.
-     * 
-     * @param document Document XML a guardar.
-     */
     private void guardarDocumentXML(Document document) {
         try {
             TransformerFactory transformerFactory = TransformerFactory.newInstance();
